# mdformat-obsidian

./: .copier-answers.yml  .pre-commit-config.yaml  .pre-commit-test.yaml  .ruff.toml  AGENTS.md  CODE_REVIEW.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
mdformat_obsidian/: __init__.py  plugin.py
mdformat_obsidian/_synced/alert_factories/: __init__.py  _alert_factories.py
mdformat_obsidian/factories/: __init__.py  _obsidian_blockquote_factories.py
mdformat_obsidian/mdit_plugins/: __init__.py  _obsidian_callouts.py  _obsidian_inline_footnotes.py  _obsidian_plugin.py  _obsidian_task_lists.py
scripts/: canary.py  canary_repos.py
tests/: __init__.py  helpers.py  pre-commit-test.md  test_gfm_interop.py  test_hypothesis.py  test_hypothesis_obsidian.py  test_mdformat.py
tests/format/: fixtures.md  test_fixtures.py  test_format.py
tests/format/fixtures/: dollar_math.md  obsidian_callouts.md  obsidian_inline_footnotes.md  obsidian_task_lists.md
tests/render/: test_render.py
tests/render/fixtures/: obsidian.md  obsidian_callouts.md  obsidian_inline_footnotes.md  obsidian_task_lists.md
