[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.10"]

[project]
authors = [
  {email = "dev.act.kyle@gmail.com", name = "kyleking"},
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mdformat >= 0.7.19",
  "mdformat-gfm >= 1.0.0",
  "mdit-py-plugins >= 0.4.1",
]
description = "Format Markdown for Obsidian including Callouts (Admonitions)"
keywords = ["markdown", "markdown-it", "mdformat", "mdformat_plugin_template"]
license = "MIT"
license-files = ["LICENSE"]
name = "mdformat_obsidian"
readme = "README.md"
requires-python = ">=3.10.0"
version = "0.3.1"

[project.entry-points."mdformat.parser_extension"]
obsidian = "mdformat_obsidian"

[project.optional-dependencies]
recommended = [
  # Keep in-sync with README
  "mdformat-beautysh >= 0.1.1",
  "mdformat-config >= 0.2.1",
  "mdformat-frontmatter >= 2.0.8",
  "mdformat-ruff >= 0.1.3",
  "mdformat-simple-breaks >= 0.0.1",
  "mdformat-web >= 0.1.0",
  "mdformat-wikilink >= 0.2.0",
  # Patches https://github.com/lovesegfault/beautysh/issues/248 for Python 3.12
  "setuptools",
]
test = [
  "hypothesis >= 6.100.0",
  "pytest >= 9.0.1",
  "pytest-beartype >= 0.2.0",
  "pytest-cov >= 7.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/kyleking/mdformat-obsidian/issues"
"Changelog" = "https://github.com/kyleking/mdformat-obsidian/releases"
homepage = "https://github.com/kyleking/mdformat-obsidian"

[tool.commitizen]
tag_format = "v${version}"
version = "0.3.1"
version_files = ["mdformat_obsidian/__init__.py", "pyproject.toml:^version"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
enable_error_code = ["ignore-without-code", "possibly-undefined", "redundant-expr", "truthy-bool"]
extra_checks = true
files = ["mdformat_obsidian", "tests"]
no_implicit_reexport = true
python_version = "3.10"
show_column_numbers = true
show_error_codes = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pyright]
include = ["mdformat_obsidian", "tests"]
pythonVersion = "3.10"

[tool.pytest-watcher]
ignore_patterns = []
now = true
patterns = ["*.ambr", "*.md", "*.py"]
runner = "tox"
# PLANNED: requires support for TYPE_CHECKING https://github.com/beartype/beartype/issues/477
# runner_args = ["-e", "test", "--", "--exitfirst", "--failed-first", "--new-first", "-vv", "--beartype-packages=mdformat_obsidian"]
runner_args = ["-e", "test", "--", "--exitfirst", "--failed-first", "--new-first", "-vv"]

[tool.ruff]
# Docs: https://github.com/charliermarsh/ruff
# Tip: poetry run python -m ruff --explain RUF100
line-length = 88
target-version = 'py310'

[tool.ruff.lint]
ignore = [
  'assert', # Use of `assert` detected
  'blind-except', # Do not catch blind exception: `Exception`
  'boolean-type-hint-positional-argument', # Boolean-typed positional argument in function definition
  'docstring-missing-returns', # `return` is not documented in docstring
  'docstring-missing-yields', # `yield` is not documented in docstring
  'incorrect-blank-line-before-class', # "1 blank line required before class docstring" (Conflicts with D211)
  'invalid-argument-name', # Argument name `startLine` should be lowercase
  'invalid-todo-tag', # Invalid TODO tag: `FIXME`
  'line-contains-fixme', # Line contains FIXME
  'line-contains-hack', # Line contains HACK
  'line-contains-todo', # Line contains TODO
  'line-too-long', # Line too long (89 > 88)
  'missing-copyright-notice', # Missing copyright notice at top of file
  'missing-todo-author', # Missing author in TODO; try: `# TODO(<author_name>): ...`
  'missing-todo-link', # Missing issue link on the line following this TODO
  'missing-trailing-comma', # missing-trailing-comma
  'missing-type-args', # Missing type annotation for `*args`
  'missing-type-kwargs', # Missing type annotation for `**kwargs`
  'mixed-case-variable-in-class-scope', # Variable `lineMax` in class scope should not be mixedCase
  'multi-line-summary-second-line', # "Multi-line docstring summary should start at the second line" (Conflicts with D212)
  'raise-vanilla-args', # Avoid specifying long messages outside the exception class
  'raw-string-in-exception', # Exception must not use a string literal, assign to variable first
  'too-many-arguments', # Too many arguments in function definition (6 > 5)
  'typing-only-standard-library-import', # Move standard library import `argparse` into a type-checking block (for beartype)
  'typing-only-third-party-import', # Move third-party import `mdformat.renderer.typing.Postprocess` into a type-checking block (for beartype)
]
preview = true
select = ['ALL']
unfixable = [
  'commented-out-code', # Commented out code
]

[tool.ruff.lint.isort]
known-first-party = ['mdformat_obsidian', 'tests']

[tool.ruff.lint.per-file-ignores]
'__init__.py' = [
  'undocumented-public-package', # Missing docstring in public package
]
'tests/*.py' = [
  'assert', # Use of `assert` detected
  'import-private-name', # Private name import `_<>` from external module
  'missing-return-type-private-function', # Missing return type annotation for private function `test_make_diffable`
  'missing-return-type-undocumented-public-function', # Missing return type annotation for public function
  'missing-type-function-argument', # Missing type annotation for function argument
  'pytest-missing-fixture-name-underscore', # flake8-pytest-style: fixture does not return
  'undocumented-public-function', # Missing docstring in public function
  'undocumented-public-module', # Missing docstring in public module
  'unused-function-argument', # Unused function argument: `line`
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = true
in_place = true
trailing_comma_inline_array = true

[tool.tomlsort.overrides."tool.pytest-watcher.*"]
inline_arrays = false

[tool.tomlsort.overrides."tool.tox.env.*"]
inline_arrays = false

[tool.tox]
# Docs: https://tox.wiki/en/4.23.2/config.html#core
basepython = ["py310", "py314"]
env_list = ["hook-min", "prek", "ruff", "test-min", "type"]
isolated_build = true
requires = ["tox>=4.32.0"]
skip_missing_interpreters = false

[tool.tox.env.canary]
basepython = ["py314"]
changedir = "{tox_root}"
commands = [["python", "scripts/canary.py", {default = [], extend = true, replace = "posargs"}]]
description = "Run mdformat idempotency checks against real downstream repos configured in scripts/canary_repos.py. Optionally specify: '-- some-repo another-repo' to test a subset."
skip_install = false

[tool.tox.env.cz]
basepython = ["py314"]
commands = [["cz", "bump", {default = [], extend = true, replace = "posargs"}]]
commands_pre = [["tox", "-e", "canary"]]
deps = "commitizen>=4.10.0"
description = "Bump version using commitizen. Optionally specify: '-- --increment MAJOR|MINOR|PATCH' or '-- --dry-run'"
skip_install = true

[tool.tox.env."hook-min"]
basepython = ["py310"]
commands = [["prek", "run", "--config=.pre-commit-test.yaml", "--all-files", {default = ["--show-diff-on-failure", "--verbose"], extend = true, replace = "posargs"}]]
deps = "prek>=0.2.17"

[tool.tox.env.prek]
basepython = ["py314"]
commands = [["prek", "run", "--all-files", {default = [], extend = true, replace = "posargs"}]]
deps = "prek>=0.2.17"
skip_install = true

[tool.tox.env.ruff]
basepython = ["py314"]
commands = [
  ["ruff", "check", ".", "--fix", {default = [], extend = true, replace = "posargs"}],
  ["ruff", "format", "."],
]
deps = "ruff>=0.14.5"
description = "Optionally, specify: '-- --unsafe-fixes'"
skip_install = true

[tool.tox.env.test]
basepython = ["py314"]
commands = [["pytest", "--cov=mdformat_obsidian", {default = [], extend = true, replace = "posargs"}]]
# PLANNED: requires support for TYPE_CHECKING https://github.com/beartype/beartype/issues/477
# description = "Optionally, specify: '-- --exitfirst --failed-first --new-first -vv --beartype-packages=mdformat_obsidian"
description = "Optionally, specify: '-- --exitfirst --failed-first --new-first -vv"
extras = ["test"]

[tool.tox.env."test-min"]
basepython = ["py310"]
commands = [["pytest", "--cov=mdformat_obsidian"]]
extras = ["test"]

[tool.tox.env.type]
basepython = ["py314"]
commands = [["mypy", "./mdformat_obsidian", {default = [], extend = true, replace = "posargs"}]]
deps = ["mypy>=1.18.2"]

[tool.tox.env_run_base]
# Validates that commands are set
commands = [["error-commands-are-not-set"]]

[tool.uv.build-backend]
module-root = ""
